parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    INICIA

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAMA ID SEMICOLON declara_vars gotoPrincipal declara_fun principal
Rule 2     declara_vars -> var
Rule 3     declara_vars -> empty
Rule 4     declara_fun -> funcion declara_fun
Rule 5     declara_fun -> empty
Rule 6     principal -> PRINCIPAL principal2 LPAREN RPAREN bloque
Rule 7     var -> VAR var2
Rule 8     var2 -> type COLON ids df2 var3
Rule 9     var3 -> var2
Rule 10    var3 -> empty
Rule 11    type -> type1
Rule 12    type -> type2
Rule 13    funcion -> FUNCION fun_type ID funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7
Rule 14    fun_type -> VOID setCurrentType
Rule 15    fun_type -> type1
Rule 16    parametros -> param
Rule 17    parametros -> empty
Rule 18    param -> type1 ID funDec2 param1
Rule 19    param1 -> COMMA param
Rule 20    param1 -> empty
Rule 21    type1 -> INT setCurrentType
Rule 22    type1 -> FLOAT setCurrentType
Rule 23    type1 -> CHAR setCurrentType
Rule 24    type2 -> DATAFRAME setCurrentType df
Rule 25    type2 -> STRING setCurrentType
Rule 26    ids -> lista SEMICOLON
Rule 27    lista -> ID addVariable dd lista1
Rule 28    dd -> dim_dec dimDec8
Rule 29    dd -> empty
Rule 30    lista1 -> COMMA lista
Rule 31    lista1 -> empty
Rule 32    dim_dec -> LBRACKET dimDec2 CTEINT dimDec5 RBRACKET decRenglones dim_dec1
Rule 33    dim_dec1 -> LBRACKET CTEINT dimDec6 RBRACKET decColumnas
Rule 34    dim_dec1 -> empty
Rule 35    dim_index -> LBRACKET dimAccess2 exp6 exp activaArray arregloAcc RBRACKET exp7 dim_index1
Rule 36    dim_index1 -> LBRACKET exp6 exp activaArray RBRACKET exp7 matrizAcc
Rule 37    dim_index1 -> empty
Rule 38    bloque -> LCURBRACKET est RCURBRACKET
Rule 39    est -> estatutos est
Rule 40    est -> empty
Rule 41    estatutos -> asignacion
Rule 42    estatutos -> llamada
Rule 43    estatutos -> retorno
Rule 44    estatutos -> lectura
Rule 45    estatutos -> escritura
Rule 46    estatutos -> carga_datos
Rule 47    estatutos -> decision
Rule 48    estatutos -> condicional
Rule 49    estatutos -> ciclo
Rule 50    estatutos -> funciones_especiales_void
Rule 51    asignacion -> variable EQUALS sec1 exp SEMICOLON sec2
Rule 52    variable -> ID pExp1 di
Rule 53    di -> dim_index
Rule 54    di -> empty
Rule 55    llamada -> ID funCall1 LPAREN llamada1 RPAREN funCall5
Rule 56    llamada1 -> exp funCall3 llamada2
Rule 57    llamada1 -> empty
Rule 58    llamada2 -> COMMA llamada1
Rule 59    llamada2 -> empty
Rule 60    retorno -> REGRESA sec3 LPAREN exp RPAREN pRetorno SEMICOLON
Rule 61    lectura -> LEE sec3 LPAREN variable RPAREN SEMICOLON sec4 sec5
Rule 62    escritura -> ESCRIBE sec3 LPAREN esc RPAREN SEMICOLON sec5
Rule 63    esc -> esc1 esc2
Rule 64    esc1 -> exp sec4
Rule 65    esc2 -> COMMA esc
Rule 66    esc2 -> empty
Rule 67    carga_datos -> CARGAARCHIVO LPAREN ID pExp1 COMMA CTESTRING cteStr COMMA ca COMMA ca RPAREN SEMICOLON carga
Rule 68    ca -> ID
Rule 69    ca -> CTEINT cteInt
Rule 70    decision -> SI LPAREN expresion RPAREN cond1 ENTONCES bloque sino cond2
Rule 71    sino -> SINO cond3 bloque
Rule 72    sino -> empty
Rule 73    condicional -> MIENTRAS ciclos1 LPAREN expresion RPAREN ciclos2 HAZ bloque ciclos3
Rule 74    ciclo -> DESDE ciclos4 variable EQUALS sec1 exp ciclos5 HASTA ciclos6 exp ciclos7 HACER bloque ciclos8
Rule 75    funciones_especiales_void -> VARIABLES funEsp1 LPAREN ID COMMA ID COMMA ID RPAREN SEMICOLON
Rule 76    funciones_especiales_void -> fev LPAREN ID COMMA v_exp RPAREN SEMICOLON
Rule 77    fev -> HISTOGRAMA funEsp1
Rule 78    fev -> LINEAL funEsp1
Rule 79    funciones_especiales -> fe LPAREN ID pExp1 COMMA CTEINT cteInt COMMA CTEINT cteInt RPAREN funEsp2
Rule 80    funciones_especiales -> CORRELACIONA funEsp1 LPAREN ID pExp1 COMMA ID pExp1 COMMA CTEINT cteInt COMMA CTEINT cteInt RPAREN funEsp3
Rule 81    fe -> MEDIA funEsp1
Rule 82    fe -> MODA funEsp1
Rule 83    fe -> VARIANZA funEsp1
Rule 84    v_exp -> VARIABLES LBRACKET exp RBRACKET
Rule 85    var_cte -> CTECHAR cteChar
Rule 86    var_cte -> CTESTRING cteStr
Rule 87    var_cte -> MINUS neg var_num
Rule 88    var_cte -> var_num
Rule 89    var_num -> CTEINT cteInt
Rule 90    var_num -> CTEFLOAT cteFloat
Rule 91    expresion -> mega_exp expresion1
Rule 92    expresion1 -> EQUALS expresion
Rule 93    expresion1 -> empty
Rule 94    mega_exp -> super_exp meg
Rule 95    meg -> op_l exp10 mega_exp exp11
Rule 96    meg -> empty
Rule 97    op_l -> AND
Rule 98    op_l -> OR
Rule 99    super_exp -> exp sp
Rule 100   sp -> op_r exp exp9
Rule 101   sp -> empty
Rule 102   op_r -> LESSTHAN exp8
Rule 103   op_r -> GREATERTHAN exp8
Rule 104   op_r -> LESSEQ exp8
Rule 105   op_r -> GREATEREQ exp8
Rule 106   op_r -> NOTEQUAL exp8
Rule 107   op_r -> ISEQUAL exp8
Rule 108   exp -> termino exp4 exp1
Rule 109   exp1 -> op_a exp
Rule 110   exp1 -> empty
Rule 111   op_a -> PLUS exp2
Rule 112   op_a -> MINUS exp2
Rule 113   termino -> factor exp5 term
Rule 114   term -> op_a1 termino
Rule 115   term -> empty
Rule 116   op_a1 -> TIMES exp3
Rule 117   op_a1 -> DIVIDE exp3
Rule 118   factor -> var_cte
Rule 119   factor -> LPAREN exp6 exp RPAREN exp7
Rule 120   factor -> variable
Rule 121   factor -> llamada
Rule 122   factor -> funciones_especiales
Rule 123   empty -> <empty>
Rule 124   gotoPrincipal -> <empty>
Rule 125   principal2 -> <empty>
Rule 126   df -> <empty>
Rule 127   df2 -> <empty>
Rule 128   setCurrentType -> <empty>
Rule 129   addVariable -> <empty>
Rule 130   decRenglones -> <empty>
Rule 131   decColumnas -> <empty>
Rule 132   funDec1 -> <empty>
Rule 133   funDec2 -> <empty>
Rule 134   funDec4 -> <empty>
Rule 135   funDec7 -> <empty>
Rule 136   funCall1 -> <empty>
Rule 137   funCall3 -> <empty>
Rule 138   funCall5 -> <empty>
Rule 139   funEsp1 -> <empty>
Rule 140   funEsp2 -> <empty>
Rule 141   funEsp3 -> <empty>
Rule 142   neg -> <empty>
Rule 143   cteInt -> <empty>
Rule 144   cteFloat -> <empty>
Rule 145   cteChar -> <empty>
Rule 146   cteStr -> <empty>
Rule 147   pExp1 -> <empty>
Rule 148   exp2 -> <empty>
Rule 149   exp3 -> <empty>
Rule 150   exp4 -> <empty>
Rule 151   exp5 -> <empty>
Rule 152   exp6 -> <empty>
Rule 153   exp7 -> <empty>
Rule 154   exp8 -> <empty>
Rule 155   exp9 -> <empty>
Rule 156   exp10 -> <empty>
Rule 157   exp11 -> <empty>
Rule 158   sec1 -> <empty>
Rule 159   sec2 -> <empty>
Rule 160   sec3 -> <empty>
Rule 161   sec4 -> <empty>
Rule 162   sec5 -> <empty>
Rule 163   cond1 -> <empty>
Rule 164   cond2 -> <empty>
Rule 165   cond3 -> <empty>
Rule 166   ciclos1 -> <empty>
Rule 167   ciclos2 -> <empty>
Rule 168   ciclos3 -> <empty>
Rule 169   ciclos4 -> <empty>
Rule 170   ciclos5 -> <empty>
Rule 171   ciclos6 -> <empty>
Rule 172   ciclos7 -> <empty>
Rule 173   ciclos8 -> <empty>
Rule 174   pRetorno -> <empty>
Rule 175   dimDec2 -> <empty>
Rule 176   dimDec5 -> <empty>
Rule 177   dimDec6 -> <empty>
Rule 178   dimDec8 -> <empty>
Rule 179   dimAccess2 -> <empty>
Rule 180   arregloAcc -> <empty>
Rule 181   matrizAcc -> <empty>
Rule 182   activaArray -> <empty>
Rule 183   carga -> <empty>

Terminals, with rules where they appear

AND                  : 97
CARGAARCHIVO         : 67
CHAR                 : 23
COLON                : 8
COMMA                : 19 30 58 65 67 67 67 75 75 76 79 79 80 80 80
COMMENT              : 
CORRELACIONA         : 80
CTECHAR              : 85
CTEFLOAT             : 90
CTEINT               : 32 33 69 79 79 80 80 89
CTESTRING            : 67 86
DATAFRAME            : 24
DESDE                : 74
DIVIDE               : 117
ENTONCES             : 70
EQUALS               : 51 74 92
ESCRIBE              : 62
FLOAT                : 22
FUNCION              : 13
GREATEREQ            : 105
GREATERTHAN          : 103
HACER                : 74
HASTA                : 74
HAZ                  : 73
HISTOGRAMA           : 77
ID                   : 1 13 18 27 52 55 67 68 75 75 75 76 79 80 80
INICIA               : 
INT                  : 21
ISEQUAL              : 107
LBRACKET             : 32 33 35 36 84
LCURBRACKET          : 38
LEE                  : 61
LESSEQ               : 104
LESSTHAN             : 102
LINEAL               : 78
LPAREN               : 6 13 55 60 61 62 67 70 73 75 76 79 80 119
MEDIA                : 81
MIENTRAS             : 73
MINUS                : 87 112
MODA                 : 82
NOTEQUAL             : 106
OR                   : 98
PLUS                 : 111
PRINCIPAL            : 6
PROGRAMA             : 1
RBRACKET             : 32 33 35 36 84
RCURBRACKET          : 38
REGRESA              : 60
RPAREN               : 6 13 55 60 61 62 67 70 73 75 76 79 80 119
SEMICOLON            : 1 26 51 60 61 62 67 75 76
SI                   : 70
SINO                 : 71
STRING               : 25
TIMES                : 116
VAR                  : 7
VARIABLES            : 75 84
VARIANZA             : 83
VOID                 : 14
error                : 

Nonterminals, with rules where they appear

activaArray          : 35 36
addVariable          : 27
arregloAcc           : 35
asignacion           : 41
bloque               : 6 13 70 71 73 74
ca                   : 67 67
carga                : 67
carga_datos          : 46
ciclo                : 49
ciclos1              : 73
ciclos2              : 73
ciclos3              : 73
ciclos4              : 74
ciclos5              : 74
ciclos6              : 74
ciclos7              : 74
ciclos8              : 74
cond1                : 70
cond2                : 70
cond3                : 71
condicional          : 48
cteChar              : 85
cteFloat             : 90
cteInt               : 69 79 79 80 80 89
cteStr               : 67 86
dd                   : 27
decColumnas          : 33
decRenglones         : 32
decision             : 47
declara_fun          : 1 4
declara_vars         : 1 13
df                   : 24
df2                  : 8
di                   : 52
dimAccess2           : 35
dimDec2              : 32
dimDec5              : 32
dimDec6              : 33
dimDec8              : 28
dim_dec              : 28
dim_dec1             : 32
dim_index            : 53
dim_index1           : 35
empty                : 3 5 10 17 20 29 31 34 37 40 54 57 59 66 72 93 96 101 110 115
esc                  : 62 65
esc1                 : 63
esc2                 : 63
escritura            : 45
est                  : 38 39
estatutos            : 39
exp                  : 35 36 51 56 60 64 74 74 84 99 100 109 119
exp1                 : 108
exp10                : 95
exp11                : 95
exp2                 : 111 112
exp3                 : 116 117
exp4                 : 108
exp5                 : 113
exp6                 : 35 36 119
exp7                 : 35 36 119
exp8                 : 102 103 104 105 106 107
exp9                 : 100
expresion            : 70 73 92
expresion1           : 91
factor               : 113
fe                   : 79
fev                  : 76
funCall1             : 55
funCall3             : 56
funCall5             : 55
funDec1              : 13
funDec2              : 18
funDec4              : 13
funDec7              : 13
funEsp1              : 75 77 78 80 81 82 83
funEsp2              : 79
funEsp3              : 80
fun_type             : 13
funcion              : 4
funciones_especiales : 122
funciones_especiales_void : 50
gotoPrincipal        : 1
ids                  : 8
lectura              : 44
lista                : 26 30
lista1               : 27
llamada              : 42 121
llamada1             : 55 58
llamada2             : 56
matrizAcc            : 36
meg                  : 94
mega_exp             : 91 95
neg                  : 87
op_a                 : 109
op_a1                : 114
op_l                 : 95
op_r                 : 100
pExp1                : 52 67 79 80 80
pRetorno             : 60
param                : 16 19
param1               : 18
parametros           : 13
principal            : 1
principal2           : 6
programa             : 0
retorno              : 43
sec1                 : 51 74
sec2                 : 51
sec3                 : 60 61 62
sec4                 : 61 64
sec5                 : 61 62
setCurrentType       : 14 21 22 23 24 25
sino                 : 70
sp                   : 99
super_exp            : 94
term                 : 113
termino              : 108 114
type                 : 8
type1                : 11 15 18
type2                : 12
v_exp                : 76
var                  : 2
var2                 : 7 9
var3                 : 8
var_cte              : 118
var_num              : 87 88
variable             : 51 61 74 120

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAMA ID SEMICOLON declara_vars gotoPrincipal declara_fun principal

    PROGRAMA        shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAMA . ID SEMICOLON declara_vars gotoPrincipal declara_fun principal

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAMA ID . SEMICOLON declara_vars gotoPrincipal declara_fun principal

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAMA ID SEMICOLON . declara_vars gotoPrincipal declara_fun principal
    (2) declara_vars -> . var
    (3) declara_vars -> . empty
    (7) var -> . VAR var2
    (123) empty -> .

    VAR             shift and go to state 8
    FUNCION         reduce using rule 123 (empty -> .)
    PRINCIPAL       reduce using rule 123 (empty -> .)

    declara_vars                   shift and go to state 5
    var                            shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) programa -> PROGRAMA ID SEMICOLON declara_vars . gotoPrincipal declara_fun principal
    (124) gotoPrincipal -> .

    FUNCION         reduce using rule 124 (gotoPrincipal -> .)
    PRINCIPAL       reduce using rule 124 (gotoPrincipal -> .)

    gotoPrincipal                  shift and go to state 9

state 6

    (2) declara_vars -> var .

    FUNCION         reduce using rule 2 (declara_vars -> var .)
    PRINCIPAL       reduce using rule 2 (declara_vars -> var .)
    LCURBRACKET     reduce using rule 2 (declara_vars -> var .)


state 7

    (3) declara_vars -> empty .

    FUNCION         reduce using rule 3 (declara_vars -> empty .)
    PRINCIPAL       reduce using rule 3 (declara_vars -> empty .)
    LCURBRACKET     reduce using rule 3 (declara_vars -> empty .)


state 8

    (7) var -> VAR . var2
    (8) var2 -> . type COLON ids df2 var3
    (11) type -> . type1
    (12) type -> . type2
    (21) type1 -> . INT setCurrentType
    (22) type1 -> . FLOAT setCurrentType
    (23) type1 -> . CHAR setCurrentType
    (24) type2 -> . DATAFRAME setCurrentType df
    (25) type2 -> . STRING setCurrentType

    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    STRING          shift and go to state 18

    var2                           shift and go to state 10
    type                           shift and go to state 11
    type1                          shift and go to state 12
    type2                          shift and go to state 13

state 9

    (1) programa -> PROGRAMA ID SEMICOLON declara_vars gotoPrincipal . declara_fun principal
    (4) declara_fun -> . funcion declara_fun
    (5) declara_fun -> . empty
    (13) funcion -> . FUNCION fun_type ID funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7
    (123) empty -> .

    FUNCION         shift and go to state 22
    PRINCIPAL       reduce using rule 123 (empty -> .)

    declara_fun                    shift and go to state 19
    funcion                        shift and go to state 20
    empty                          shift and go to state 21

state 10

    (7) var -> VAR var2 .

    FUNCION         reduce using rule 7 (var -> VAR var2 .)
    PRINCIPAL       reduce using rule 7 (var -> VAR var2 .)
    LCURBRACKET     reduce using rule 7 (var -> VAR var2 .)


state 11

    (8) var2 -> type . COLON ids df2 var3

    COLON           shift and go to state 23


state 12

    (11) type -> type1 .

    COLON           reduce using rule 11 (type -> type1 .)


state 13

    (12) type -> type2 .

    COLON           reduce using rule 12 (type -> type2 .)


state 14

    (21) type1 -> INT . setCurrentType
    (128) setCurrentType -> .

    COLON           reduce using rule 128 (setCurrentType -> .)
    ID              reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 24

state 15

    (22) type1 -> FLOAT . setCurrentType
    (128) setCurrentType -> .

    COLON           reduce using rule 128 (setCurrentType -> .)
    ID              reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 25

state 16

    (23) type1 -> CHAR . setCurrentType
    (128) setCurrentType -> .

    COLON           reduce using rule 128 (setCurrentType -> .)
    ID              reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 26

state 17

    (24) type2 -> DATAFRAME . setCurrentType df
    (128) setCurrentType -> .

    COLON           reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 27

state 18

    (25) type2 -> STRING . setCurrentType
    (128) setCurrentType -> .

    COLON           reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 28

state 19

    (1) programa -> PROGRAMA ID SEMICOLON declara_vars gotoPrincipal declara_fun . principal
    (6) principal -> . PRINCIPAL principal2 LPAREN RPAREN bloque

    PRINCIPAL       shift and go to state 30

    principal                      shift and go to state 29

state 20

    (4) declara_fun -> funcion . declara_fun
    (4) declara_fun -> . funcion declara_fun
    (5) declara_fun -> . empty
    (13) funcion -> . FUNCION fun_type ID funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7
    (123) empty -> .

    FUNCION         shift and go to state 22
    PRINCIPAL       reduce using rule 123 (empty -> .)

    funcion                        shift and go to state 20
    declara_fun                    shift and go to state 31
    empty                          shift and go to state 21

state 21

    (5) declara_fun -> empty .

    PRINCIPAL       reduce using rule 5 (declara_fun -> empty .)


state 22

    (13) funcion -> FUNCION . fun_type ID funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7
    (14) fun_type -> . VOID setCurrentType
    (15) fun_type -> . type1
    (21) type1 -> . INT setCurrentType
    (22) type1 -> . FLOAT setCurrentType
    (23) type1 -> . CHAR setCurrentType

    VOID            shift and go to state 33
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    fun_type                       shift and go to state 32
    type1                          shift and go to state 34

state 23

    (8) var2 -> type COLON . ids df2 var3
    (26) ids -> . lista SEMICOLON
    (27) lista -> . ID addVariable dd lista1

    ID              shift and go to state 37

    ids                            shift and go to state 35
    lista                          shift and go to state 36

state 24

    (21) type1 -> INT setCurrentType .

    COLON           reduce using rule 21 (type1 -> INT setCurrentType .)
    ID              reduce using rule 21 (type1 -> INT setCurrentType .)


state 25

    (22) type1 -> FLOAT setCurrentType .

    COLON           reduce using rule 22 (type1 -> FLOAT setCurrentType .)
    ID              reduce using rule 22 (type1 -> FLOAT setCurrentType .)


state 26

    (23) type1 -> CHAR setCurrentType .

    COLON           reduce using rule 23 (type1 -> CHAR setCurrentType .)
    ID              reduce using rule 23 (type1 -> CHAR setCurrentType .)


state 27

    (24) type2 -> DATAFRAME setCurrentType . df
    (126) df -> .

    COLON           reduce using rule 126 (df -> .)

    df                             shift and go to state 38

state 28

    (25) type2 -> STRING setCurrentType .

    COLON           reduce using rule 25 (type2 -> STRING setCurrentType .)


state 29

    (1) programa -> PROGRAMA ID SEMICOLON declara_vars gotoPrincipal declara_fun principal .

    $end            reduce using rule 1 (programa -> PROGRAMA ID SEMICOLON declara_vars gotoPrincipal declara_fun principal .)


state 30

    (6) principal -> PRINCIPAL . principal2 LPAREN RPAREN bloque
    (125) principal2 -> .

    LPAREN          reduce using rule 125 (principal2 -> .)

    principal2                     shift and go to state 39

state 31

    (4) declara_fun -> funcion declara_fun .

    PRINCIPAL       reduce using rule 4 (declara_fun -> funcion declara_fun .)


state 32

    (13) funcion -> FUNCION fun_type . ID funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7

    ID              shift and go to state 40


state 33

    (14) fun_type -> VOID . setCurrentType
    (128) setCurrentType -> .

    ID              reduce using rule 128 (setCurrentType -> .)

    setCurrentType                 shift and go to state 41

state 34

    (15) fun_type -> type1 .

    ID              reduce using rule 15 (fun_type -> type1 .)


state 35

    (8) var2 -> type COLON ids . df2 var3
    (127) df2 -> .

    INT             reduce using rule 127 (df2 -> .)
    FLOAT           reduce using rule 127 (df2 -> .)
    CHAR            reduce using rule 127 (df2 -> .)
    DATAFRAME       reduce using rule 127 (df2 -> .)
    STRING          reduce using rule 127 (df2 -> .)
    FUNCION         reduce using rule 127 (df2 -> .)
    PRINCIPAL       reduce using rule 127 (df2 -> .)
    LCURBRACKET     reduce using rule 127 (df2 -> .)

    df2                            shift and go to state 42

state 36

    (26) ids -> lista . SEMICOLON

    SEMICOLON       shift and go to state 43


state 37

    (27) lista -> ID . addVariable dd lista1
    (129) addVariable -> .

    LBRACKET        reduce using rule 129 (addVariable -> .)
    COMMA           reduce using rule 129 (addVariable -> .)
    SEMICOLON       reduce using rule 129 (addVariable -> .)

    addVariable                    shift and go to state 44

state 38

    (24) type2 -> DATAFRAME setCurrentType df .

    COLON           reduce using rule 24 (type2 -> DATAFRAME setCurrentType df .)


state 39

    (6) principal -> PRINCIPAL principal2 . LPAREN RPAREN bloque

    LPAREN          shift and go to state 45


state 40

    (13) funcion -> FUNCION fun_type ID . funDec1 LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7
    (132) funDec1 -> .

    LPAREN          reduce using rule 132 (funDec1 -> .)

    funDec1                        shift and go to state 46

state 41

    (14) fun_type -> VOID setCurrentType .

    ID              reduce using rule 14 (fun_type -> VOID setCurrentType .)


state 42

    (8) var2 -> type COLON ids df2 . var3
    (9) var3 -> . var2
    (10) var3 -> . empty
    (8) var2 -> . type COLON ids df2 var3
    (123) empty -> .
    (11) type -> . type1
    (12) type -> . type2
    (21) type1 -> . INT setCurrentType
    (22) type1 -> . FLOAT setCurrentType
    (23) type1 -> . CHAR setCurrentType
    (24) type2 -> . DATAFRAME setCurrentType df
    (25) type2 -> . STRING setCurrentType

    FUNCION         reduce using rule 123 (empty -> .)
    PRINCIPAL       reduce using rule 123 (empty -> .)
    LCURBRACKET     reduce using rule 123 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16
    DATAFRAME       shift and go to state 17
    STRING          shift and go to state 18

    type                           shift and go to state 11
    var3                           shift and go to state 47
    var2                           shift and go to state 48
    empty                          shift and go to state 49
    type1                          shift and go to state 12
    type2                          shift and go to state 13

state 43

    (26) ids -> lista SEMICOLON .

    INT             reduce using rule 26 (ids -> lista SEMICOLON .)
    FLOAT           reduce using rule 26 (ids -> lista SEMICOLON .)
    CHAR            reduce using rule 26 (ids -> lista SEMICOLON .)
    DATAFRAME       reduce using rule 26 (ids -> lista SEMICOLON .)
    STRING          reduce using rule 26 (ids -> lista SEMICOLON .)
    FUNCION         reduce using rule 26 (ids -> lista SEMICOLON .)
    PRINCIPAL       reduce using rule 26 (ids -> lista SEMICOLON .)
    LCURBRACKET     reduce using rule 26 (ids -> lista SEMICOLON .)


state 44

    (27) lista -> ID addVariable . dd lista1
    (28) dd -> . dim_dec dimDec8
    (29) dd -> . empty
    (32) dim_dec -> . LBRACKET dimDec2 CTEINT dimDec5 RBRACKET decRenglones dim_dec1
    (123) empty -> .

    LBRACKET        shift and go to state 53
    COMMA           reduce using rule 123 (empty -> .)
    SEMICOLON       reduce using rule 123 (empty -> .)

    dd                             shift and go to state 50
    dim_dec                        shift and go to state 51
    empty                          shift and go to state 52

state 45

    (6) principal -> PRINCIPAL principal2 LPAREN . RPAREN bloque

    RPAREN          shift and go to state 54


state 46

    (13) funcion -> FUNCION fun_type ID funDec1 . LPAREN parametros RPAREN funDec4 declara_vars bloque funDec7

    LPAREN          shift and go to state 55


state 47

    (8) var2 -> type COLON ids df2 var3 .

    FUNCION         reduce using rule 8 (var2 -> type COLON ids df2 var3 .)
    PRINCIPAL       reduce using rule 8 (var2 -> type COLON ids df2 var3 .)
    LCURBRACKET     reduce using rule 8 (var2 -> type COLON ids df2 var3 .)


state 48

    (9) var3 -> var2 .

    FUNCION         reduce using rule 9 (var3 -> var2 .)
    PRINCIPAL       reduce using rule 9 (var3 -> var2 .)
    LCURBRACKET     reduce using rule 9 (var3 -> var2 .)


state 49

    (10) var3 -> empty .

    FUNCION         reduce using rule 10 (var3 -> empty .)
    PRINCIPAL       reduce using rule 10 (var3 -> empty .)
    LCURBRACKET     reduce using rule 10 (var3 -> empty .)


state 50

    (27) lista -> ID addVariable dd . lista1
    (30) lista1 -> . COMMA lista
    (31) lista1 -> . empty
    (123) empty -> .

    COMMA           shift and go to state 57
    SEMICOLON       reduce using rule 123 (empty -> .)

    lista1                         shift and go to state 56
    empty                          shift and go to state 58

state 51

    (28) dd -> dim_dec . dimDec8
    (178) dimDec8 -> .

    COMMA           reduce using rule 178 (dimDec8 -> .)
    SEMICOLON       reduce using rule 178 (dimDec8 -> .)

    dimDec8                        shift and go to state 59

state 52

    (29) dd -> empty .

    COMMA           reduce using rule 29 (dd -> empty .)
    SEMICOLON       reduce using rule 29 (dd -> empty .)


state 53

    (32) dim_dec -> LBRACKET . dimDec2 CTEINT dimDec5 RBRACKET decRenglones dim_dec1
    (175) dimDec2 -> .

    CTEINT          reduce using rule 175 (dimDec2 -> .)

    dimDec2                        shift and go to state 60

state 54

    (6) principal -> PRINCIPAL principal2 LPAREN RPAREN . bloque
    (38) bloque -> . LCURBRACKET est RCURBRACKET

    LCURBRACKET     shift and go to state 62

    bloque                         shift and go to state 61

state 55

    (13) funcion -> FUNCION fun_type ID funDec1 LPAREN . parametros RPAREN funDec4 declara_vars bloque funDec7
    (16) parametros -> . param
    (17) parametros -> . empty
    (18) param -> . type1 ID funDec2 param1
    (123) empty -> .
    (21) type1 -> . INT setCurrentType
    (22) type1 -> . FLOAT setCurrentType
    (23) type1 -> . CHAR setCurrentType

    RPAREN          reduce using rule 123 (empty -> .)
    INT             shift and go to state 14
    FLOAT           shift and go to state 15
    CHAR            shift and go to state 16

    parametros                     shift and go to state 63
    param                          shift and go to state 64
    empty                          shift and go to state 65
    type1                          shift and go to state 66

state 56

    (27) lista -> ID addVariable dd lista1 .

    SEMICOLON       reduce using rule 27 (lista -> ID addVariable dd lista1 .)


state 57

    (30) lista1 -> COMMA . lista
    (27) lista -> . ID addVariable dd lista1

    ID              shift and go to state 37

    lista                          shift and go to state 67

state 58

    (31) lista1 -> empty .

    SEMICOLON       reduce using rule 31 (lista1 -> empty .)


state 59

    (28) dd -> dim_dec dimDec8 .

    COMMA           reduce using rule 28 (dd -> dim_dec dimDec8 .)
    SEMICOLON       reduce using rule 28 (dd -> dim_dec dimDec8 .)


state 60

    (32) dim_dec -> LBRACKET dimDec2 . CTEINT dimDec5 RBRACKET decRenglones dim_dec1

    CTEINT          shift and go to state 68


state 61

    (6) principal -> PRINCIPAL principal2 LPAREN RPAREN bloque .

    $end            reduce using rule 6 (principal -> PRINCIPAL principal2 LPAREN RPAREN bloque .)


state 62

    (38) bloque -> LCURBRACKET . est RCURBRACKET
    (39) est -> . estatutos est
    (40) est -> . empty
    (41) estatutos -> . asignacion
    (42) estatutos -> . llamada
    (43) estatutos -> . retorno
    (44) estatutos -> . lectura
    (45) estatutos -> . escritura
    (46) estatutos -> . carga_datos
    (47) estatutos -> . decision
    (48) estatutos -> . condicional
    (49) estatutos -> . ciclo
    (50) estatutos -> . funciones_especiales_void
    (123) empty -> .
    (51) asignacion -> . variable EQUALS sec1 exp SEMICOLON sec2
    (55) llamada -> . ID funCall1 LPAREN llamada1 RPAREN funCall5
    (60) retorno -> . REGRESA sec3 LPAREN exp RPAREN pRetorno SEMICOLON
    (61) lectura -> . LEE sec3 LPAREN variable RPAREN SEMICOLON sec4 sec5
    (62) escritura -> . ESCRIBE sec3 LPAREN esc RPAREN SEMICOLON sec5
    (67) carga_datos -> . CARGAARCHIVO LPAREN ID pExp1 COMMA CTESTRING cteStr COMMA ca COMMA ca RPAREN SEMICOLON carga
    (70) decision -> . SI LPAREN expresion RPAREN cond1 ENTONCES bloque sino cond2
    (73) condicional -> . MIENTRAS ciclos1 LPAREN expresion RPAREN ciclos2 HAZ bloque ciclos3
    (74) ciclo -> . DESDE ciclos4 variable EQUALS sec1 exp ciclos5 HASTA ciclos6 exp ciclos7 HACER bloque ciclos8
    (75) funciones_especiales_void -> . VARIABLES funEsp1 LPAREN ID COMMA ID COMMA ID RPAREN SEMICOLON
    (76) funciones_especiales_void -> . fev LPAREN ID COMMA v_exp RPAREN SEMICOLON
    (52) variable -> . ID pExp1 di
    (77) fev -> . HISTOGRAMA funEsp1
    (78) fev -> . LINEAL funEsp1

    RCURBRACKET     reduce using rule 123 (empty -> .)
    ID              shift and go to state 83
    REGRESA         shift and go to state 84
    LEE             shift and go to state 85
    ESCRIBE         shift and go to state 86
    CARGAARCHIVO    shift and go to state 87
    SI              shift and go to state 88
    MIENTRAS        shift and go to state 89
    DESDE           shift and go to state 90
    VARIABLES       shift and go to state 91
    HISTOGRAMA      shift and go to state 93
    LINEAL          shift and go to state 94

    est                            shift and go to state 69
    estatutos                      shift and go to state 70
    empty                          shift and go to state 71
    asignacion                     shift and go to state 72
    llamada                        shift and go to state 73
    retorno                        shift and go to state 74
    lectura                        shift and go to state 75
    escritura                      shift and go to state 76
    carga_datos                    shift and go to state 77
    decision                       shift and go to state 78
    condicional                    shift and go to state 79
    ciclo                          shift and go to state 80
    funciones_especiales_void      shift and go to state 81
    variable                       shift and go to state 82
    fev                            shift and go to state 92

state 63

    (13) funcion -> FUNCION fun_type ID funDec1 LPAREN parametros . RPAREN funDec4 declara_vars bloque funDec7

    RPAREN          shift and go to state 95


state 64

    (16) parametros -> param .

    RPAREN          reduce using rule 16 (parametros -> param .)


state 65
